--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -1,2 +1,2 @@
-$main-red: #e6130f;
+$main-red: #8a8a8a;
 $main-dark: #020202;
